--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <!-- <link
+         rel="preload"
+         href="/assets/Pacifico-Bold.woff2"
+         as="font"
+         type="font/woff2"
+         crossorigin
+      /> -->
+
       <link
-         rel="stylesheet"
          media="screen"
          href="https://fontlibrary.org/face/hk-grotesk"
-         type="text/css"
+         as="fetch"
+         type="font/css"
+         crossorigin
+         rel="stylesheet"
       />
       <base href="%PUBLIC_URL%/" />
       <title>React App</title>
